# youtube_downloader

./: .env.example  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  TODO.md  USAGE.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: INSTALL.md
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
scripts/: build.sh  install.sh  release.sh
src/youtube_downloader/: __init__.py  cli.py  config.py  converter.py  downloader.py  logger.py
src/yt_down/: app.py  cli.py  config.py  converter.py  downloader.py  logger.py  utils.py
