[project]
name = "yt-down"
version = "0.1.0"
description = "YouTube to MP3 downloader and playlist converter with parallel processing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "moviepy>=1.0.3,<2.0",
    "python-dotenv>=1.0.0",
    "pytubefix>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "mutagen>=1.45.0",
]
authors = [{ name = "Ozair Couto", email = "ozair@example.com" }]
license = { text = "MIT" }
keywords = [
    "youtube",
    "mp3",
    "download",
    "playlist",
    "converter",
    "audio",
    "music",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ozairx/yt-down"
Repository = "https://github.com/ozairx/yt-down"
Issues = "https://github.com/ozairx/yt-down/issues"
Documentation = "https://github.com/ozairx/yt-down#readme"
Changelog = "https://github.com/ozairx/yt-down/blob/main/CHANGELOG.md"

[project.scripts]
yt-down = "yt_down.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/yt_down"]

[tool.hatchling.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
